# SOEN-321

./: .env.example  .gitignore  README.md  SETUP_GUIDE.md  clean-results.sh  docker-compose.yaml  main.py  pyproject.toml
notebooks/: Experiment.ipynb  README.md  analysis.ipynb  ollama_test.ipynb  steganography_testing.ipynb
notebooks/old/: ollama_test_with_rag.ipynb  steganography_testing.ipynb
research_papers/: README.md  llm_code_understanding.txt  llm_code_understanding_flawed.txt  sample_paper.txt
research_papers_PDF/: README.md
results/: categorical_analysis_20251130_105633.csv  comprehensive_categorical_rag_k40_smart_20251130_055714.csv  comprehensive_numeric_rag_k40_smart_20251130_042319.csv  numerical_analysis_20251130_105633.csv
scripts/: README.md  test_llm_steganography.py
