[project]
name = "llm-steganography-research"
version = "0.1.0"
description = "Testing LLM AI adversarial steganographic attack prompts on research papers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.3.3",
    "colorlog>=6.10.1",
    "pymupdf>=1.26.6",
    "ollama>=0.6.1",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-core>=0.3.0",
    "faiss-cpu>=1.8.0",
]

[project.optional-dependencies]
dev = ["black[jupyter]>=24.4.2"]
